; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_RTCU32MSecRegWrite.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_RTCU32MSecRegWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_MSEC_U32_REG_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @RTCU32MSecRegWrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RTCU32MSecRegWrite(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @RTC_MSEC_U32_REG_ADDR, align 4
  %5 = call i32 @MAP_PRCMHIBRegRead(i32 %4)
  %6 = and i32 %5, -67043329
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @RTC_MSEC_U32_REG_ADDR, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  %10 = and i32 %9, 1023
  %11 = shl i32 %10, 16
  %12 = or i32 %8, %11
  %13 = call i32 @MAP_PRCMHIBRegWrite(i32 %7, i32 %12)
  ret void
}

declare dso_local i32 @MAP_PRCMHIBRegRead(i32) #1

declare dso_local i32 @MAP_PRCMHIBRegWrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
